fix sort block on mobile devices

--- a/src/assets/styling/search-modifiers.scss
+++ b/src/assets/styling/search-modifiers.scss
@@ -10,12 +10,19 @@
   @media(min-width: $breakpointMd) {
     align-items: flex-end;
   }
+
+  @media(max-width: $breakpointSm) {
+    margin-top: 0rem;
+  }
 }
 
 .lls-search-modifier-inputs {
   display: flex;
-  justify-content: flex-end;
   width: 100%;
+
+  @media(min-width: $breakpointMd) {
+    align-items: flex-end;
+  }
 }
 
 .lls-search-modifier-inputs__entry {
